Se actualizacion archivos de clase 2, control de flujo

--- a/02-control_de_flujos/index.html
+++ b/02-control_de_flujos/index.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="condicionales.js" defer></script>
 </head>
-
 <body>
-
+    
 </body>
-
-<script>
-    console.log("Escribiendo desde el metodo 1");
-
-</script>
-
 </html>
